# axum-postgres-template

./: .env.sample  Cargo.toml  Makefile  README.md  openapi.json  rust-toolchain.toml
.cursor/rules/: api-conventions.mdc  backend-architecture.mdc  rust-standards.mdc
.github/workflows/: rust.yml
docs/: backup.md  billing.md  checklist.md  email-dns.md  pii.md  retention.md  runbook.md  stripe-setup.md
migrations/: 20250305120000_create_users.sql  20250305120001_create_email_login_codes.sql  20250305120002_create_password_reset_tokens.sql  20250305120003_create_roles_permissions.sql  20250305120004_create_billing.sql  202603050001_init_auth_billing.sql  202603050002_add_stripe_customer_id_to_users.sql  202603050003_add_files_permissions.sql  20260305120004_add_orgs_workspaces.sql  20260305120005_add_org_to_billing.sql  20260305120006_add_orgs_workspaces_permissions.sql  20260306120000_add_login_lockout.sql  20260306120001_add_api_keys.sql  20260306120002_extend_subscriptions.sql  20260306120003_extend_subscription_transactions.sql  20260306120004_subscription_sync_fields.sql  20260307120000_add_billing_email_to_subscription_transactions.sql  20260309120000_add_soft_delete_columns.sql  20260309120001_add_admin_permissions.sql  20260309120002_create_audit_log.sql  20260309120003_create_feature_flags.sql
src/: api_error.rs  cfg.rs  db.rs  lib.rs  main.rs  middleware.rs  telemetry.rs
src/ai/: routes.rs  service.rs
src/auth/: account_deletion.rs  account_export.rs  api_key_repository.rs  api_key_routes.rs  api_key_service.rs  audit.rs  email_sender.rs  email_templates.rs  extractor.rs  mod.rs  permissions.rs  rbac_routes.rs  rbac_service.rs  repository.rs  routes.rs  service.rs
src/billing/: mod.rs  repository.rs  routes.rs  service.rs
src/common/: errors.rs  mod.rs  pagination.rs
src/common/types/: ids.rs  mod.rs
src/feature_flags/: mod.rs  repository.rs  routes.rs  service.rs
src/jobs/: mod.rs  scheduler.rs
src/org/: mod.rs  repository.rs  routes.rs  service.rs
src/realtime/: handler.rs  hub.rs  message.rs  mod.rs  routes.rs
src/routes/: admin_users.rs  contact.rs  health_check.rs  impersonate.rs  job_stats.rs  mod.rs  v1.rs
src/services/: mod.rs
src/storage/: mod.rs  routes.rs  service.rs
src/types/: ids.rs  mod.rs
templates/emails/: contact_form.html  contact_form.txt  login_code.html  login_code.txt  password_reset.html  password_reset.txt  past_due_reminder.html  past_due_reminder.txt  payment_failed.html  payment_failed.txt  trial_ending_soon.html  trial_ending_soon.txt
tests/api/: auth.rs  files.rs  health_check.rs  helpers.rs  main.rs  webhooks.rs
