[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
axum = "0.8"
hyper = "1.8"
tower = { version = "0.5", features = [] }
tower-http = { version = "0.6", features = [
    "trace",
    "timeout",
    "request-id",
    "cors",
    "normalize-path",
    "set-header",
] }

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "json",
    "uuid",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v7", "serde"] }
dotenvy = "0.15"

anyhow = "1.0"
thiserror = "2.0"

argon2 = "0.5"
jsonwebtoken = "9"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
oauth2 = "4"
tower_governor = "0.8"
rand = "0.8"

utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
