[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[[bin]]
path = "src/bin/openapi-gen.rs"
name = "openapi-gen"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
axum = "0.8"
hyper = "1.8"
tower = { version = "0.5", features = [] }
tower-http = { version = "0.6", features = [
    "trace",
    "timeout",
    "request-id",
    "cors",
    "normalize-path",
    "set-header",
] }

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "json",
    "uuid",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "ansi"] }

reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v7", "serde"] }
dotenvy = "0.15"

anyhow = "1.0"
thiserror = "2.0"

argon2 = "0.5"
sha2 = "0.10"
jsonwebtoken = "9"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
askama = "0.12"
oauth2 = "4"
tower_governor = "0.8"
rand = "0.8"

utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

stripe = { package = "async-stripe", version = "0.41", default-features = false, features = [
    "runtime-tokio-hyper",
    "checkout",
    "billing",
    "products",
] }
hmac = "0.12"
hex = "0.4"
subtle = "2.5"

aws-config = "1.2"
aws-credential-types = "1.2"
aws-sdk-s3 = "1.2"
aws-types = "1.2"
bytes = "1.0"
axum-extra = { version = "0.12.5", features = ["cookie"] }
cookie = "0.18.1"
